# dl4nlp-project-fsa

./: .gitignore  MLproject  README.md  TASKS.md  mlflow.env  mlflow_gc.sh  mlflow_server.sh  mlflow_server_DEBUG.sh  no-secrets.env  preprocess_everything.sh  pyproject.toml
docs/: datasets-notes.md  loss-function-idea.md  mlflow-stuff.md  obsidian-commented-dl4nlp-project-pipeline.excalidraw.md  on-schedulers-and-optimizers.md  optimization-notes.md  spark-docs.md
spark/: spark-scripts-readme.md  spark-setup.md  spark.application.env  spark_start.sh  spark_stop.sh
src/: mlflow_project_launcher.py  mlflow_run.py  training_test.py
src/data/: common.py  semeval_2017_dataset.py  spark.py  stocktwits_crypto_dataset.py  train_val_data_module.py
src/data/data_modules/: finbert_train_val_data_module.py  train_val_data_module.py
src/data/fine_tuned_finbert/: preprocessing_base.py
src/data/hand_engineered_mlp/: preprocessing_base.py
src/data/preprocessing/: spark.py
src/end_to_end_TODO/: TODO.py
src/evaluation/: evaluate_finbert.py
src/fine_tuned_finbert/datasets/: preprocessing_base.py
src/fine_tuned_finbert/evaluation/: evaluate_finbert.py
src/fine_tuned_finbert/models/: fine_tuned_finbert.py  loss_functions.py
src/hand_eng_mlp_TODO/datasets/: preprocessing_base.py  preprocessing_features_extraction.py
src/hand_eng_mlp_TODO/datasets_TODO/: preprocessing_base.py
src/hand_eng_mlp_TODO/evaluation/: TODO.py
src/hand_eng_mlp_TODO/launchers/: mlflow_hand_eng_mlp_full_training.py  mlflow_hand_eng_mlp_hyperopt.py  mlflow_hand_eng_mlp_second_order_fine_tuning.py
src/hand_eng_mlp_TODO/models/: TMW_MLP.py  TODO.py
src/launchers/: mlflow_finbert_full_training.py  mlflow_finbert_hyperopt.py  mlflow_finbert_second_order_fine_tuning.py
src/models/: fine_tuned_finbert.py  loss_functions.py
src/models/modules/: lora.py
src/notebooks/: jupytext.sh
src/notebooks/first-finbert-test-todos-and-notes/: SDF_did_it_so_U_dont_have_to_do_it.py
src/notebooks/lora_finbert/: lora_finbert.py
src/notebooks/pytorch-lightning-test/: pytorch-lightning-test.py
src/training/: finbert_train.py  finbert_train_debug.py  hyperopt.py  hyperopt_train.py  hyperopt_tuning.py  loader.py  second_order_fine_tuning.py  semeval_full_training.py  train.py  training_test.py
src/utils/: io.py  mlflow_env.py  random.py  system.py
(+46 files in other folders)
