[tool.poetry]
name = "dl4nlp-project-fsa"
version = "0.1.0"
description = ""
authors = ["zACIID <marchioropierluigi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dl4nlp-project-fsa" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
loguru = "^0.7.2"
seaborn = "^0.13.2"
plotly = "^5.20.0"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
jupytext = "^1.16.1"
transformers = "^4.39.3"

# UserWarning raised by mlflow.utils.autologging_utils
# Autologging is known to be compatible with pytorch-lightning versions between 1.4.9 and 2.2.0.post0
#   and may not succeed with packages outside this range.
# Supported pytorch is <= 2.2.1, as per mlflow.mlflow_package_versions
torch = {version = "2.2.1", source = "pytorch_cu118"}
lightning = "2.2.0"

mlflow = "^2.11.3"
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
pynvml = "^11.5.0"
openpyxl = "^3.1.2"
pyspark = "^3.5.1"
scikit-learn = "^1.4.2"
click = "^8.1.7"


[[tool.poetry.source]]
# Added via
# `poetry source add --priority explicit pytorch_cu118 https://download.pytorch.org/whl/cu118`
# Reference SO answer:
# https://stackoverflow.com/a/76359919
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
